# keystone

./: .gitignore  .gitmessage  CITATION.cff  CONTRIBUTING.md  DEPENDENTS.md  README.md  environment.yml  index.html  projtemp.code-workspace  pyproject.toml
.github/ISSUE_TEMPLATE/: general.yml
.github/workflows/: ci.yml
conda.recipe/: meta.yaml
config/tools/: black.toml  mypy.ini  pylintrc.ini  pylintrc_tests.ini  releaserc.toml
docs/: conf.py  index.md
docs/api/: index.md
docs/guide/: cli-reference.md  configuration.md  getting-started.md
src/package_name/: __init__.py  __main__.py  __version__.py  cli.py  module_name.py
tests/: conftest.py  test.py
