# ==================================================================================================
# Pyproject Configuration for the {{ package_name }} Package
#
# TODO: Replace placeholders with actual values.
#
# - {{ package_name }}: Name of the package
# - {{ author_name }} : Author's name
# - {{ email }}       : Author's email
# - {{ description }} : Brief description of the package
# - {{ github_user }}   : GitHub username
# - {{ repo_name }}   : GitHub repository name
# ==================================================================================================

# --- Build System Requirements --------------------------------------------------------------------

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


# --- Package Metadata -----------------------------------------------------------------------------

[project]
name = "{{ package_name }}"
version = "0.0.0"
authors = [{name = "{{ author_name }}", email = "{{ email }}"}]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = {file = "README.md", content-type = "text/markdown"}
description = "{{ description }}"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
urls = {homepage = "https://github.com/{{ github_user }}/{{ repo_name }}"}


# --- Dependencies ---------------------------------------------------------------------------------

requires-python = ">=3.12"

dependencies = [

]


# --- Package Source Code --------------------------------------------------------------------------

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# --- CLI Entry Points -----------------------------------------------------------------------------

[project.scripts]
loretex = "{{ package_name }}.cli:app"
